--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sly/calendar-sequence",
+    "name": "sfiolka/calendar-sequence",
     "type": "library",
     "license": "MIT",
     "description": "",
